--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>HBNB</title>
-</head>
-<body>
+  </head>
+  <body>
     <H1>States</H1>
     <ul>
     {% for state in states.values()|sort(attribute='name')%}
-    <li>{{state.id}}: <B>{{state.name}}</B></li>
+    <li>{{state.id}}: <b>{{state.name}}</b></li>
     {% endfor %}
     </ul>
- </body>
+  </body>
 </html>
