--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -4,13 +4,13 @@
     <title>HBNB</title>
 </head>
 <body>
-    <H1>States</H1>
+    <h1>States</h1>
     <ul>
     {% for state in states.values()|sort(attribute='name')%}
-    <li>{{state.id}}: <B>{{state.name}}</B>
+    <li>{{state.id}}: <b>{{state.name}}</b>
       <ul>
         {% for city in state.cities|sort(attribute="name") %}
-          <li>{{ city.id }}: <B>{{ city.name }}</B></li>
+          <li>{{ city.id }}: <b>{{ city.name }}</b></li>
         {% endfor %}
       </ul>
     </li>
